--- a/website/.vuepress/override.styl
+++ b/website/.vuepress/override.styl
@@ -1,12 +1,20 @@
-$accentColor = red
+// vuepress
+$accentColor = #337ab7
 $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
+$arrowBgColor = #ccc
 
+// custom
+$lightBlue = #f5f8fa
+$gray = #fcfcfc
 
-//.theme-container
-//  &.home-page-layout
-//    .search-box
-//      display none
+.sidebar
+  background $lightBlue
 
-// colors!!!
+.navbar
+  background $gray
+
+.search-box
+  input
+    background-color: $gray
